rank system fixed and points overflow fixed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1189,7 +1189,7 @@ color:rgb(92,0,1);
 .leader_divider{
   width:1px;
   height:189px;
-  margin:10px 10px 0 20px;
+  margin:10px 15px 0 20px;
   float:left;
   background:url(leaderboard_divider.gif);
 }
@@ -1240,7 +1240,7 @@ color:rgb(92,0,1);
 text-decoration:underline;
 }
 .leader li{
-  width:183px;
+  width:188px;
   float:right;
   margin-top:6px;
 }
